# Bonsai

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  test_e2e.py
Bonsai/: generator.py  model_definitions.py  parser.py  test_parser.py  test_pipeline.py
Bonsai/models/: lgb_binary.json  lgb_multiclass.json  lgb_regression.json  xgb_binary.json  xgb_multiclass.json  xgb_regression.json
bonsai/: __init__.py  __main__.py  generator.py  parser.py
embedded/: memprof.sh  verify.c  verifyClass.c
examples/: Classification.ipynb  Regression.ipynb  wind_turbine_lgb.json  wind_turbine_xgb.json
gen_minimal/: Makefile
gen_minimal/lgb_binary/: model_dfs.h  model_dfs_q16.h  model_q16.h
gen_minimal/lgb_multiclass/: model_default.h  model_dfs.h  model_dfs_q16.h  model_q16.h  model_q8.h
gen_minimal/lgb_regression/: model_default.h  model_dfs.h  model_dfs_q16.h  model_q16.h
gen_minimal/lightgbm_binary/: lightgbm.h  main.c
gen_minimal/lightgbm_multiclass/: lightgbm.h  main.c
gen_minimal/lightgbm_regression/: Makefile  lightgbm.h  main.c
gen_minimal/xgb_binary/: model_default.h  model_dfs.h  model_dfs_q16.h  model_q8.h
gen_minimal/xgb_multiclass/: model_default.h  model_dfs.h  model_dfs_q16.h  model_q16.h  model_q8.h
gen_minimal/xgb_regression/: model_dfs.h  model_dfs_q16.h  model_q16.h  model_q8.h
gen_minimal/xgboost_binary/: main.c  xgboost.h
legacy/: lgb2c.py  xgb2c.py
research/: machine_learner.py  tree2c.py  tree2c_compact.py
tests/: conftest.py  test_compile.py  test_generate.py
(+17 files in other folders)
